--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,13 @@ packages = [{include = "tg_symstoremgr"}]
 tg_symstoremgr = 'tg_symstoremgr.__main__:main'
 
 [tool.poetry.dependencies]
-python = "^3.10"
-pymongo = "^4.3.3"
+# centos7 builders use python 3.6
+python = ">=3.6.8"
+pymongo = ">=4"
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^6.0.0"
+flake8 = ">=5"
 pydocstyle = "^6.3.0"
-pytest = "^7.2.1"
+pytest = ">=7"
 
 [tool.poetry_bumpversion.file."tg_symstoremgr/__init__.py"]
